--- a/index.html
+++ b/index.html
@@ -2,29 +2,25 @@
     <head>
         <meta charset="utf-8">
         <title>Coolname Stock Portfolio Simulator</title>
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
     <body>
-        <h3>Coolname Stock Portfolio Simulator</h3>
-
-        <!-- <form id="form1">
-          Username: <input type="text" name="uname" placeholder="Enter Username"><br>
-          Password: <input type="password" name="pswrd" placeholder="Enter Password"><br><br>
-          <input type="submit" value="Submit">
-        </form> -->
-        <div class="username">
-          <label>Username</label>
-          <input id="uname" type="text" placeholder="Enter Username" required>
+      <div class="form_container">
+        <div>
+          <h3>Coolname Stock Portfolio Simulator</h3>
+          <div class="input_1">
+            <label>Username</label>
+            <input id="uname" type="text" placeholder="Enter Username" required>
+          </div>
+          <div class="input_1">
+            <label>Password</label>
+            <input id="pswrd" type="password" placeholder="Enter Password" required>
+          </div>
+          <div class="login">
+            <button id="Login">Login</button>
+          </div>
         </div>
-
-        <div class="password">
-          <label>Password</label>
-          <input id="pswrd" type="password" placeholder="Enter Password" required>
-        </div>
-
-        <div class="login">
-          <button id="Login">Login</button>
-        </div>
-
+      </div>
     </body>
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
