change style for user

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
           </div>
         </div>
       </div>
+      <div  class="form_container2">
+      </div>
     </body>
     <script
       src="https://code.jquery.com/jquery-3.2.1.min.js"
