change admin styling

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
           </div>
         </div>
       </div>
+      <div class="admin_container">
+        <h3>Coolname Stock Portfolio Simulator</h3>
+      </div>
       <div  class="form_container2">
       </div>
     </body>
