Made display_userlist() helper function and moved some html elements of admin in index.js to index.html

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 
       <div class="admin_container">
         <h3>Coolname Stock Portfolio Simulator</h3>
+        <h4 class="welcome_user" id="welcome_admin">Welcome Admin</h4>
 
         <div id="admin_op_div">
           <button id="newUser_button">Add New User</button>
@@ -49,8 +50,12 @@
             <button id="addCash_submit">Give Cash</button>
             <button id="addCash_cancel">Cancel</button>
           </div>
+        </div>
 
-
+        <div id="adminPanel">
+          <h1>User Data:</h1>
+          <div id=userlist_container>
+          </div>
         </div>
 
 
