--- a/index.html
+++ b/index.html
@@ -2,25 +2,26 @@
     <head>
         <meta charset="utf-8">
         <title>Coolname Stock Portfolio Simulator</title>
-        <!--
+
         <link rel="stylesheet" type="text/css" href="index.css">
-      -->
 
     </head>
+
     <body>
-      <h3>Coolname Stock Portfolio Simulator</h3>
+      <h3 id="title">Coolname Stock Portfolio Simulator</h3>
+
+
       <div id="login_container">
 
         <div class="input_1">
-          <label>Username</label>
           <input id="uname" type="text" placeholder="Enter Username" required>
         </div>
         <div class="input_1">
-          <label>Password</label>
           <input id="pswrd" type="password" placeholder="Enter Password" required>
         </div>
-        <div class="login">
-          <button id="Login">Login</button>
+
+        <div id="login_button_div">
+          <button id="Login">Log In</button>
         </div>
       </div>
 
