For displaying user's stocks, switched from list to table

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         </div>
 
         <div id="stocklist_container">
-          <ul id='stocklist_list'></ul>
+  <!--        <ul id='stocklist_list'></ul>   -->
+          <table id="userStockTable"></table>
         </div>
 
         <div id="stockTrade_form">
