Added styling to searchStocks.

--- a/index.html
+++ b/index.html
@@ -89,32 +89,32 @@
       </div>
 
 
-
-      <div id=searchStock_container>
-        <label>Search Stock </label>
-        <input id="searchSymbol" type="text" placeholder="Enter stock symbol">
-        <button id="searchButton">Search</button>
-      </div>
-
-      <div id=searchStockResults_container>
-        <h1 id="stockTicker"></h1>
-        <h2 id="stockCompany"></h2>
-        <p id="stockPrice"></p>
-
-        <div id="stockHistory">
-          <ul id="histories"></ul>
-          <button class="stockHistory_buttons" id="one_week">1-Week History</button>
-          <button class="stockHistory_buttons" id="six_months">6-Month History</button>
-          <button class="stockHistory_buttons" id="one_year">1-Year History</button>
-          <div id="stockHistoryDetails">
-            <div id="stockHistoryDiv1w"></div>
-            <div id="stockHistoryDiv6m"></div>
-            <div id="stockHistoryDiv1y"></div>
-          </div>
+      <div id="search_stock_all">
+        <div id=searchStock_container>
+          <label>Search Stock </label>
+          <input id="searchSymbol" type="text" placeholder="Enter stock symbol">
+          <button id="searchButton">Search</button>
         </div>
 
-      </div>
+        <div id=searchStockResults_container>
+          <h1 id="stockTicker"></h1>
+          <h2 id="stockCompany"></h2>
+          <p id="stockPrice"></p>
 
+          <div id="stockHistory">
+            <ul id="histories"></ul>
+            <button class="stockHistory_buttons" id="one_week">1-Week History</button>
+            <button class="stockHistory_buttons" id="six_months">6-Month History</button>
+            <button class="stockHistory_buttons" id="one_year">1-Year History</button>
+            <div id="stockHistoryDetails">
+              <div id="stockHistoryDiv1w"></div>
+              <div id="stockHistoryDiv6m"></div>
+              <div id="stockHistoryDiv1y"></div>
+            </div>
+          </div>
+
+        </div>
+      </div>
 
     </body>
 
