Moved nested button.click() in index.js. Created a logout button.

--- a/index.html
+++ b/index.html
@@ -28,10 +28,13 @@
 
 
       <div id="user_container">
-
         <h4 class="welcome_all" id="welcome_user">Welcome User</h4>
+        <button class="logout_class" id="logout_user">Logout</button>
+
         <div id='user_standing_div'>
           <p class='subheader' id='standing_header'>Your current standing:</p>
+          <div id="current_standing_div">
+          </div>
         </div>
 
         <div id="stocklist_container">
@@ -57,7 +60,7 @@
 
       <div id="admin_container">
         <h4 class="welcome_all" id="welcome_admin">Welcome Admin</h4>
-
+        <button class="logout_class" id="logout_admin">Logout</button>
         <div id="admin_op_div">
           <button id="newUser_button">Add New User</button>
           <button id="addCash_button">Give Cash to Existing User</button>
