--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         <h4 class="welcome_all" id="welcome_user">Welcome User</h4>
         <div id='user_standing_div'>
-          <p class='subheader' id='standing_header'>Your current standing:</p>
+          <p class='subheader' id='standing_header'>Your Current Standing:</p>
         </div>
 
         <div id="stocklist_container">
