made appearance changes to registration page

--- a/index.html
+++ b/index.html
@@ -30,10 +30,18 @@
       <div id="register_div">
         <div id="newUser_div">
           <h3 id="create_acc_title">Create a new account</h3>
-          <input id="newUsername_input" class="input_2" type="text" placeholder="Enter new username" required>
-          <input id="newPassword_input1" class="input_2" type="text" placeholder="Enter new password" required>
-          <input id="newPassword_input2" class="input_2" type="text" placeholder="Re-enter password" required>
-          <input id="newCash_input" class="input_2" type="text" placeholder="Enter cash amount" required>
+            <div class="input_1">
+              <input id="newUsername_input"  type="text" placeholder="Enter new username" required>
+            </div>
+            <div class="input_1">
+              <input id="newPassword_input1" class="input_2" type="text" placeholder="Enter new password" required>
+            </div>
+            <div class="input_1">
+              <input id="newPassword_input2" class="input_2" type="text" placeholder="Re-enter password" required>
+            </div>
+            <div class="input_1" >
+              <input id="newCash_input" class="input_2" type="text" placeholder="Enter cash amount" required>
+            </div>
           <button id="newUser_submit">Create account</button>
           <button id="newUser_cancel">Cancel</button>
         </div>
