Added DeleteUser admin operation fields

--- a/index.html
+++ b/index.html
@@ -89,18 +89,16 @@
 -->
 
           <button id="addCash_button">Give Cash to Existing User</button>
+          <button id="deleteUser_button">Delete User</button>
 
-<!--
-          <div id="newUser_div">
-            <h3>Create New User</h3>
-            <input id="newUsername_input" type="text" placeholder="Enter new username" required>
-            <input id="newPassword_input1" type="text" placeholder="Enter new password" required>
-            <input id="newPassword_input2" type="text" placeholder="Re-enter password" required>
-            <input id="newCash_input" type="text" placeholder="Enter cash amount" required>
-            <button id="newUser_submit">Create User</button>
-            <button id="newUser_cancel">Cancel</button>
+
+          <div id="deleteUser_div">
+            <h3>Delete User</h3>
+            <input id="deleteUsername_input" type="text" placeholder="Enter username" required>
+            <button id="deleteUser_submit">Remove account</button>
+            <button id="deleteUser_cancel">Cancel</button>
           </div>
--->
+
           <div id="addCash_div">
             <h3>Give Cash to User</h3>
             <input id="addCashUser_input" type="text" placeholder="Username of Recipient" required>
