change register password input type to password

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
               <input id="newUsername_input"  type="text" placeholder="Enter new username" required>
             </div>
             <div class="input_1">
-              <input id="newPassword_input1" class="input_2" type="text" placeholder="Enter new password" required>
+              <input id="newPassword_input1" class="input_2" type="password" placeholder="Enter new password" required>
             </div>
             <div class="input_1">
-              <input id="newPassword_input2" class="input_2" type="text" placeholder="Re-enter password" required>
+              <input id="newPassword_input2" class="input_2" type="password" placeholder="Re-enter password" required>
             </div>
             <div class="input_1" >
               <input id="newCash_input" class="input_2" type="text" placeholder="Enter cash amount" required>
