Grammer on create account page

--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
           <div id="login_button_div">
             <button id="Login">Log In</button>
           </div>
-          <button id="newUser_button">Create an account</button>
+          <button id="newUser_button">Create an Account</button>
         </div>
       </div>
 
       <div id="register_div">
         <div id="newUser_div">
-          <h3 id="create_acc_title">Create a new account</h3>
+          <h3 id="create_acc_title">Create a New Account</h3>
             <div class="input_1">
               <input id="newUsername_input"  type="text" placeholder="Enter new username" required>
             </div>
